alignment fix

--- a/app/static/style/ldavis.css
+++ b/app/static/style/ldavis.css
@@ -36,6 +36,7 @@
 #ldavis_el1 text {
     font-family: sans-serif;
     font-size: 11px;
+    fill: black;
 }
 
 /* IPython Notebook CSS to allow visualization to fit */
